Fixed and issue with a photo being so tall it covered up some buttons.

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ option {
 
 .product-images {
     max-width: 75%;
-    max-height: 50%;
+    max-height: 35%;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
